# zero2prod

./: Cargo.toml  Dockerfile  configuration.yaml
.sqlx/: query-045a0459232f19934b6f502ea7f1b3b61ece0d3f64bb3d0426e0641200fca917.json  query-4068cb2f166c37300fd42e415f992b87659789d49e126c9ad8d15f54f8354c4d.json  query-4687c343c240830f9edced78a6053108ec29cde104b42bf7875bb3e3031ed057.json  query-5db48f5270deabcde97b9db0f38719b8cd3bb0251e3654b11a6d4e6f8bdff525.json  query-60fa16e14e3d456a88a18388b874708f6317752c00eeb484fb892d2ae67e9599.json  query-643816bd6a2bcc56bec82f0605d6ba3bc7d510bc1ed4a8ca3fc1e11d79f00cf1.json  query-85570dcf4e296916854e16b11c27f98812d0c6441d9e0f07bc69eb93f0020641.json  query-85f0f1297006a2307628825caf786e7eff84e2f0561417a9b0b437d051b69051.json  query-86af3b78d1add42a1a937fab00ea5562df1de07b7e2c08b78dd3bdfe2d5345a5.json  query-95986805e591ddf81ee80f04a4c14f04f57570de0d6f30e799ac5e757f019a90.json  query-a0c48e89dd937fbfa954ea17df2cf0a8ca7fda264626ce7886b563939ebbf32f.json  query-b5ff771134e53e6e1e52555cb5518570106ac4a219b0188ab9310c8795c33a75.json  query-c4feb042fcfb09315cb8609750f602ca3ec64c179c8a01843899d1a13923443e.json  query-cae5ec6bf80cba7542cff57273dfd6e8db7c67e3bfeda23e944cb4b4b2d024f4.json  query-f93ff770675ef947605381bc14feb3fe8a1bcf90209a3a0f490158265a716404.json
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20241003142629_create_subscription_tokens_table.sql  20241021161206_seed_user.sql
scripts/: init_db.sh  init_redis.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  outbound.rs  startup.rs
(+87 files in other folders)
